Create temporary bchutil dep constraint

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -50,7 +50,7 @@
   name = "github.com/gcash/bchlog"
 
 [[constraint]]
-  branch = "master"
+  branch = "address"
   name = "github.com/gcash/bchutil"
 
 [[constraint]]
